--- a/paima-prando/package.json
+++ b/paima-prando/package.json
@@ -4,12 +4,17 @@
   "description": "fork of Prando for generating randomness for paima engine",
   "main": "lib/index.js",
   "type": "module",
+  "types": "lib/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "prettier --write '**/*.ts'"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "prettier": "^2.6.2",
+    "prettier-plugin-organize-imports": "^2.3.4"
   }
 }
