--- a/SM/package.json
+++ b/SM/package.json
@@ -7,7 +7,9 @@
   "type": "module",
   "files": ["/dist"],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "prettier --write '**/*.ts'"
   },
   "author": "",
   "license": "ISC",
@@ -20,6 +22,8 @@
   },
   "devDependencies": {
     "@types/pg": "^8.6.5",
-    "typescript": "^4.7.3"
+    "typescript": "^4.7.3",
+    "prettier": "^2.6.2",
+    "prettier-plugin-organize-imports": "^2.3.4"
   }
 }
