--- a/funnel/package.json
+++ b/funnel/package.json
@@ -20,13 +20,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "prettier": "^2.6.2",
+    "prettier-plugin-organize-imports": "^2.3.4"
   },
   "dependencies": {
     "@dcspark/cardano-multiplatform-lib-nodejs": "^3.0.0-beta.0",
     "@emurgo/cardano-message-signing-nodejs": "^1.0.1",
     "paima-utils": "file:../paima-utils",
-    "prettier": "^2.7.1",
     "web3": "^1.7.4"
   }
 }
