--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "scripts": {
     "lint": "eslint",
-    "build": "npx tsc --build tsconfig.build.json"
+    "build": "npx tsc --build tsconfig.build.json",
+    "prettier": "prettier --config .prettierrc --ignore-path .prettierignore --check .",
+    "prettier:fix": "prettier --write --config .prettierrc --ignore-path .prettierignore --check ."
   },
   "workspaces": [
     "./paima-utils",
