--- a/paima-prando/package.json
+++ b/paima-prando/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "Fork of Prando for generating randomness for Paima Engine",
   "main": "build/index.js",
-  "files": ["/build"],
+  "files": [
+    "/build"
+  ],
   "type": "module",
   "types": "build/index.d.ts",
   "scripts": {
