--- a/tsconfig.json
+++ b/tsconfig.json
@@ -96,7 +96,5 @@
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
   },
-  "exclude": [
-    "node_modules",
-    "admin-panel"]
+  "exclude": ["node_modules", "admin-panel"]
 }
