--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "lint": "eslint && npm run prettier",
+    "lint": "eslint '**/*!(*.{d,queries}).{ts,tsx}' --ignore-path .gitignore",
     "build": "npx tsc --build tsconfig.build.json",
     "prettier": "prettier --write '**/*.{ts,tsx}'"
   },
@@ -29,6 +29,9 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.31.10",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "prettier": "^2.7.1",
     "typescript": "^4.8.4"
   },
