--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "lint": "eslint '**/*!(*.{d,queries}).{ts,tsx}' --ignore-path .gitignore",
+    "lint": "eslint '**/*!(*.{d,queries}).{ts,tsx}' --ignore-path .gitignore && npm run prettier",
     "build": "npx tsc --build tsconfig.build.json",
     "prettier": "prettier --write '**/*.{ts,tsx}'"
   },
