--- a/paima-executors/package.json
+++ b/paima-executors/package.json
@@ -16,11 +16,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "typescript": "^4.7.4",
     "prettier": "^2.6.2",
-    "prettier-plugin-organize-imports": "^2.3.4"
+    "prettier-plugin-organize-imports": "^2.3.4",
+    "typescript": "^4.7.4"
   },
   "dependencies": {
-    "@paima/prando": "1.0.0"
+    "@paima/prando": "1.0.0",
+    "bullmq": "^3.5.3"
   }
 }
