Attempted removal of paima-standalone from workspaces

--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "./paima-executors",
     "./paima-funnel",
     "./paima-sm",
-    "./paima-runtime",
-    "./paima-standalone"
+    "./paima-runtime"
   ],
   "devDependencies": {
     "@types/eslint": "^8.4.10",
