Added paima-standalone to .eslintignore

--- a/.eslintignore
+++ b/.eslintignore
@@ -2,7 +2,10 @@ node_modules
 **/dist
 **/build
 **/lib
-**/*.tsbuildinfo
+**/\*.tsbuildinfo
 
 # Assets bundled into executable - meant to be used in standalone context so issues in paima-engine repository are irrelevant (eg. missing node_modules)
+
 paima-standalone/packaged
+
+paima-standalone
