--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "./paima-utils",
     "./paima-utils-backend",
     "./paima-crypto",
+    "./paima-providers",
     "./paima-concise",
     "./paima-prando",
     "./paima-executors",
@@ -57,6 +58,6 @@
   "dependencies": {
     "pg": "^8.8.0",
     "pg-tx": "^1.0.1",
-    "web3": "1.10.1"
+    "web3": "1.10.0"
   }
 }
