--- a/paima-batcher/game-input-validator/package.json
+++ b/paima-batcher/game-input-validator/package.json
@@ -9,6 +9,7 @@
     "@types/pg": "^8.6.5"
   },
   "dependencies": {
-    "pg": "^8.7.3"
+    "pg": "^8.7.3",
+    "@paima/concise": "file:../paima-concise"
   }
 }
