--- a/paima-batcher/webserver/package.json
+++ b/paima-batcher/webserver/package.json
@@ -11,6 +11,7 @@
     "pg": "^8.7.3"
   },
   "devDependencies": {
+    "@paima/concise": "file:../paima-concise",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.31",
