--- a/paima-concise/package.json
+++ b/paima-concise/package.json
@@ -19,7 +19,8 @@
   },
   "author": "",
   "dependencies": {
-    "ebnf": "^1.9.0"
+    "ebnf": "^1.9.0",
+    "web3-utils": "1.10.0"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.22.9",
