--- a/paima-funnel/package.json
+++ b/paima-funnel/package.json
@@ -20,7 +20,8 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
-    "@paima/utils": "1.0.0",
-    "@paima/crypto": "1.0.0"
+    "@paima/concise": "1.0.0",
+    "@paima/crypto": "1.0.0",
+    "@paima/utils": "1.0.0"
   }
 }
