--- a/paima-mw-core/package.json
+++ b/paima-mw-core/package.json
@@ -30,10 +30,12 @@
     "@metamask/providers": "^10.2.1",
     "@perawallet/connect": "^1.2.3",
     "@polkadot/extension-dapp": "^0.44.9",
-    "@truffle/hdwallet-provider": "^2.1.7",
+    "@truffle/hdwallet-provider": "^2.1.14",
     "algosdk": "^2.3.0",
     "bech32": "^2.0.0",
+    "@paima/concise": "1.0.0",
+    "@paima/crypto": "1.0.0",
     "@paima/prando": "1.0.0",
-    "@paima/crypto": "1.0.0"
+    "@paima/providers": "1.0.0"
   }
 }
