--- a/paima-providers/package.json
+++ b/paima-providers/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@paima/crypto",
+  "name": "@paima/providers",
   "version": "1.0.0",
-  "description": "Library for cryptography of blockchains supported by Paima",
+  "description": "Library for dApp connection for blockchains supported by Paima",
   "main": "build/index.js",
   "type": "module",
   "types": "build/index.d.ts",
@@ -22,13 +22,13 @@
   },
   "dependencies": {
     "@paima/utils": "1.0.0",
+    "@paima/crypto": "1.0.0",
+    "@metamask/providers": "^10.2.1",
+    "@perawallet/connect": "^1.2.3",
+    "@polkadot/extension-dapp": "^0.44.9",
+    "@truffle/hdwallet-provider": "^2.1.14",
+    "bech32": "^2.0.0",
     "web3": "1.10.0",
-    "web3-utils": "1.10.0",
-    "@cardano-foundation/cardano-verify-datasignature": "^1.0.11",
-    "algosdk": "^2.3.0",
-    "tweetnacl": "^1.0.3",
-    "@polkadot/util": "^10.4.2",
-    "@polkadot/util-crypto": "^10.4.2",
-    "bech32": "^2.0.0"
+    "web3-utils": "1.10.0"
   }
 }
