--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -4,6 +4,7 @@
     { "path": "./paima-prando" },
     { "path": "./paima-utils" },
     { "path": "./paima-crypto" },
+    { "path": "./paima-providers" },
     { "path": "./paima-db" },
     { "path": "./paima-utils-backend" },
     { "path": "./paima-concise" },
