Fix remaining compiler errors

--- a/package.json
+++ b/package.json
@@ -59,5 +59,8 @@
     "pg": "^8.8.0",
     "pg-tx": "^1.0.1",
     "web3": "1.10.0"
+  },
+  "overrides": {
+    "web3-eth-contract": "1.10.0"
   }
 }
