--- a/paima-batcher/runtime/package.json
+++ b/paima-batcher/runtime/package.json
@@ -10,6 +10,7 @@
     "@types/express": "^4.17.13"
   },
   "dependencies": {
+    "@paima/providers": "file:../paima-providers",
     "express": "^4.18.1",
     "pg": "^8.7.3"
   }
