--- a/paima-batcher/package.json
+++ b/paima-batcher/package.json
@@ -11,8 +11,9 @@
     "build": "npx tsc --build tsconfig.build.json",
     "dev": "DOTENV_CONFIG_PATH=./.env.development node --require dotenv/config ./runtime/build/index.js",
     "prod": "node ./runtime/build/index.js",
-    "start": "export ENV_FILE=\"../.env.${NODE_ENV:-production}\"; echo \"ENV FILE: $ENV_FILE\"; docker compose --env-file $ENV_FILE build && docker compose --env-file $ENV_FILE up",
-    "stop": "export ENV_FILE=\"../.env.${NODE_ENV:-production}\"; docker compose --env-file $ENV_FILE down -v"
+    "prepare:standalone": "sh batcher-standalone/scripts/prepare_standalone_folders.sh",
+    "build:standalone": "npm run build && npm run build:binary -w batcher-standalone",
+    "standalone": "pkg ./runtime/build/index.js --options \"experimental-specifier-resolution=node,no-warnings\" --config package.json"
   },
   "workspaces": [
     "./address-validator",
@@ -21,7 +22,8 @@
     "./game-input-validator",
     "./runtime",
     "./utils",
-    "./webserver"
+    "./webserver",
+    "./batcher-standalone"
   ],
   "dependencies": {
     "axios": "^1.4.0",
