--- a/paima-batcher/tsconfig.build.json
+++ b/paima-batcher/tsconfig.build.json
@@ -7,6 +7,7 @@
     { "path": "./game-input-validator" },
     { "path": "./batched-transaction-poster" },
     { "path": "./webserver" },
-    { "path": "./runtime" }
+    { "path": "./runtime" },
+    { "path": "./batcher-standalone" }
   ]
 }
