--- a/engine/paima-mw-core/package.json
+++ b/engine/paima-mw-core/package.json
@@ -6,12 +6,8 @@
   "main": "build/index.js",
   "types": "build/index.d.ts",
   "files": [
-    "/build",
-    "/scripts"
+    "/build"
   ],
-  "bin": {
-    "paima-build-middleware": "./scripts/esbuild.sh"
-  },
   "scripts": {
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
