--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
     "release": "npm install && npm run build && npm run release -w @standalone/paima-batcher && npm run release -w @standalone/paima-engine && cp -r ./packages/engine/paima-standalone/packaged/@standalone/* ./bin"
   },
   "devDependencies": {
+    "@nx/esbuild": "16.9.0",
+    "@nx/js": "^16.9.0",
     "@types/eslint-plugin-prettier": "^3.1.0",
+    "@types/node": "18.7.1",
     "@typescript-eslint/eslint-plugin": "^6.5.0",
     "@typescript-eslint/parser": "^6.5.0",
+    "esbuild": "^0.19.3",
     "eslint-config-airbnb-typescript": "^17.1.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
@@ -26,12 +30,14 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.3",
     "nx": "16.9.0",
-    "nx-cloud": "latest"
+    "prettier": "^2.6.2",
+    "typescript": "~5.1.3"
   },
   "overrides": {
     "web3-eth-contract": "1.10.0"
   },
   "workspaces": [
     "./packages/*/*"
-  ]
+  ],
+  "dependencies": {}
 }
