--- a/packages/batcher/address-validator/package.json
+++ b/packages/batcher/address-validator/package.json
@@ -5,8 +5,10 @@
   "main": "build/index.js",
   "type": "module",
   "types": "build/index.d.ts",
+  "scripts": {
+    "build": "tsc"
+  },
   "dependencies": {
-    "@paima/sdk": "1.0.0",
     "pg": "^8.7.3",
     "web3": "1.10.0"
   },
