--- a/packages/batcher/db/package.json
+++ b/packages/batcher/db/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "types": "build/index.d.ts",
   "scripts": {
+    "build": "tsc",
     "generate": "npx pgtyped -w -c pgtypedconfig.json"
   },
   "dependencies": {
