--- a/packages/batcher/game-input-validator/package.json
+++ b/packages/batcher/game-input-validator/package.json
@@ -5,11 +5,13 @@
   "main": "build/index.js",
   "type": "module",
   "types": "build/index.d.ts",
+  "scripts": {
+    "build": "tsc"
+  },
   "devDependencies": {
     "@types/pg": "^8.6.5"
   },
   "dependencies": {
-    "pg": "^8.7.3",
-    "@paima/sdk": "1.0.0"
+    "pg": "^8.7.3"
   }
 }
