--- a/packages/batcher/runtime/package.json
+++ b/packages/batcher/runtime/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "types": "build/index.d.ts",
   "scripts": {
+    "build": "tsc",
     "dev": "DOTENV_CONFIG_PATH=../.env.development node --require dotenv/config ./build/index.js",
     "prod": "node ./build/index.js"
   },
@@ -14,7 +15,6 @@
     "@types/express": "^4.17.13"
   },
   "dependencies": {
-    "@paima/sdk": "1.0.0",
     "express": "^4.18.1",
     "pg": "^8.7.3"
   }
