--- a/packages/batcher/webserver/package.json
+++ b/packages/batcher/webserver/package.json
@@ -5,13 +5,15 @@
   "main": "build/index.js",
   "type": "module",
   "types": "build/index.d.ts",
+  "scripts": {
+    "build": "tsc"
+  },
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "pg": "^8.7.3"
   },
   "devDependencies": {
-    "@paima/sdk": "1.0.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.31",
