--- a/packages/engine/paima-runtime/package.json
+++ b/packages/engine/paima-runtime/package.json
@@ -13,8 +13,7 @@
   "author": "Paima Studios",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.18.1",
-    "@paima/sdk": "1.0.0"
+    "express": "^4.18.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
