Dependencies: check and upgrade

--- a/nx.json
+++ b/nx.json
@@ -7,12 +7,24 @@
       }
     }
   },
+  "targetDefaults": {
+    "build": {
+      "dependsOn": ["^build"]
+    }
+  },
   "affected": {
     "defaultBase": "master"
   },
   "pluginsConfig": {
     "@nx/js": {
       "analyzeSourceFiles": true
+    }
+  },
+  "release": {
+    "groups": {
+      "paima-sdk": {
+        "projects": ["directory:packages/paima-sdk/*"]
+      }
     }
   }
 }
