--- a/packages/paima-sdk/paima-concise/package.json
+++ b/packages/paima-sdk/paima-concise/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@paima/concise",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Util library for concise encoding of game inputs",
   "main": "build/index.js",
   "types": "build/index.d.ts",
@@ -26,6 +26,7 @@
     "@babel/preset-env": "^7.22.9",
     "@babel/preset-typescript": "^7.22.5",
     "@types/node": "^20.4.2",
-    "ts-jest": "^29.1.1"
+    "ts-jest": "^29.1.1",
+    "@paima/utils": "1.1.0"
   }
 }
