--- a/packages/paima-sdk/paima-crypto/package.json
+++ b/packages/paima-sdk/paima-crypto/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@paima/crypto",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Library for cryptography of blockchains supported by Paima",
   "main": "build/index.js",
   "type": "module",
@@ -18,8 +18,7 @@
     "lint": "prettier --write '**/*.ts'",
     "test": "jest --runInBand"
   },
-  "devDependencies": {
-  },
+  "devDependencies": {},
   "dependencies": {
     "web3": "1.10.0",
     "web3-utils": "1.10.0",
@@ -28,6 +27,7 @@
     "tweetnacl": "^1.0.3",
     "@polkadot/util": "^10.4.2",
     "@polkadot/util-crypto": "^10.4.2",
-    "bech32": "^2.0.0"
+    "bech32": "^2.0.0",
+    "@paima/utils": "1.1.0"
   }
 }
