--- a/packages/paima-sdk/paima-executors/package.json
+++ b/packages/paima-sdk/paima-executors/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@paima/executors",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "",
   "main": "build/index.js",
   "files": [
@@ -20,5 +20,6 @@
     "prettier-plugin-organize-imports": "^2.3.4"
   },
   "dependencies": {
+    "@paima/prando": "1.1.0"
   }
 }
