--- a/packages/paima-sdk/paima-mw-core/package.json
+++ b/packages/paima-sdk/paima-mw-core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@paima/mw-core",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Middleware core to be reused among all Paima games",
   "type": "module",
   "main": "build/index.js",
@@ -30,6 +30,10 @@
     "@polkadot/extension-dapp": "^0.44.9",
     "@truffle/hdwallet-provider": "^2.1.15",
     "algosdk": "^2.3.0",
-    "bech32": "^2.0.0"
+    "bech32": "^2.0.0",
+    "@paima/utils": "1.1.0",
+    "@paima/providers": "1.1.0",
+    "@paima/concise": "1.1.0",
+    "@paima/prando": "1.1.0"
   }
 }
