--- a/packages/paima-sdk/paima-utils-backend/package.json
+++ b/packages/paima-sdk/paima-utils-backend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@paima/utils-backend",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Library for Paima helper functions for use in backend",
   "main": "build/index.js",
   "type": "module",
@@ -23,6 +23,8 @@
     "ts-jest": "^29.0.5"
   },
   "dependencies": {
-    "yaml": "^2.2.1"
+    "yaml": "^2.2.1",
+    "@paima/db": "1.1.0",
+    "@paima/utils": "1.1.0"
   }
 }
