--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "eslint": "eslint '**/*.{ts,tsx}' --ignore-path ./.eslintignore",
     "prettier": "prettier --ignore-path ./.prettierignore --write '**/*.{ts,tsx}'",
     "prebuild": "npx nx run-many -t prebuild",
-    "prepublish": "ts-node -P ./tsconfig.base.json ./scripts/check-implicit-dependencies.ts && sh ./scripts/bump-version.sh",
+    "prepublish": "ts-node -P ./tsconfig.base.json ./scripts/check-implicit-dependencies.ts && syncpack list-mismatches && sh ./scripts/bump-version.sh",
     "build": "npx nx run-many -t build",
     "release": "npm install && npm run build && npm run release -w @standalone/paima-batcher && npm run release -w @standalone/paima-engine && cp -r ./packages/engine/paima-standalone/packaged/@standalone/* ./bin"
   },
@@ -18,7 +18,7 @@
     "@nx/esbuild": "16.9.0",
     "@nx/js": "^16.9.0",
     "@types/eslint-plugin-prettier": "^3.1.0",
-    "@types/node": "18.7.1",
+    "@types/node": "^18.17.1",
     "@typescript-eslint/eslint-plugin": "^6.5.0",
     "@typescript-eslint/parser": "^6.5.0",
     "esbuild": "^0.19.3",
@@ -31,8 +31,9 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.3",
     "nx": "16.9.0",
-    "prettier": "^2.6.2",
-    "typescript": "~5.1.3"
+    "prettier": "^3.0.3",
+    "syncpack": "^11.2.1",
+    "typescript": "^5.2.2"
   },
   "overrides": {
     "web3-eth-contract": "1.10.0"
