--- a/packages/paima-sdk/paima-prando/package.json
+++ b/packages/paima-sdk/paima-prando/package.json
@@ -3,17 +3,28 @@
   "version": "1.1.0",
   "description": "Fork of Prando for generating randomness for Paima Engine",
   "main": "build/index.js",
+  "types": "build/index.d.ts",
+  "type": "module",
+  "export": {
+    ".": {
+      "types": "./build/index.d.ts"
+    }
+  },
   "files": [
     "/build"
   ],
-  "type": "module",
-  "types": "build/index.d.ts",
+  "author": "Paima Studios",
+  "license": "See license file",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/PaimaStudios/paima-engine.git"
+  },
+  "homepage": "https://docs.paimastudios.com",
   "scripts": {
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "prettier --write '**/*.ts'"
   },
-  "author": "",
   "devDependencies": {
     "typescript": "^5.2.2",
     "prettier": "^3.0.3",
