--- a/packages/paima-sdk/paima-utils-backend/package.json
+++ b/packages/paima-sdk/paima-utils-backend/package.json
@@ -3,8 +3,8 @@
   "version": "1.1.0",
   "description": "Library for Paima helper functions for use in backend",
   "main": "build/index.js",
-  "type": "module",
   "types": "build/index.d.ts",
+  "type": "module",
   "export": {
     ".": {
       "types": "./build/index.d.ts"
@@ -13,6 +13,13 @@
   "files": [
     "/build"
   ],
+  "author": "Paima Studios",
+  "license": "See license file",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/PaimaStudios/paima-engine.git"
+  },
+  "homepage": "https://docs.paimastudios.com",
   "scripts": {
     "build": "tsc",
     "test": "jest",
