--- a/package.json
+++ b/package.json
@@ -4,33 +4,37 @@
   "private": true,
   "scripts": {
     "prepare": "husky install",
-    "lint": "npm run prettier && npm run eslint",
-    "cilint": "npm run cprettier && npm run eslint",
+    "lint:versions": "ts-node -P ./tsconfig.base.json ./tools/scripts/check-implicit-dependencies.ts && syncpack list-mismatches",
+    "lint": "npm run prettier && npm run eslint && npm run lint:versions",
+    "cilint": "npm run cprettier && npm run eslint && npm run lint:versions",
     "cprettier": "prettier --ignore-path ./.prettierignore --check '**/*.{ts,tsx}'",
-    "eslint": "eslint '**/*.{ts,tsx}' --ignore-path ./.eslintignore",
+    "eslint": "eslint '**/*.{ts,tsx}'",
     "prettier": "prettier --ignore-path ./.prettierignore --write '**/*.{ts,tsx}'",
     "prebuild": "npx nx run-many -t prebuild",
-    "prepublish": "ts-node -P ./tsconfig.base.json ./scripts/check-implicit-dependencies.ts && syncpack list-mismatches && sh ./scripts/bump-version.sh",
     "build": "npx nx run-many -t build",
-    "release": "npm install && npm run build && npm run release -w @standalone/paima-batcher && npm run release -w @standalone/paima-engine && cp -r ./packages/engine/paima-standalone/packaged/@standalone/* ./bin"
+    "release:lib": "sh ./tools/scripts/bump-version.sh && npx nx release publish -g paima-sdk -d",
+    "release:bin": "npm install && npm run build && npm run release -w @standalone/paima-batcher && npm run release -w @standalone/paima-engine && cp -r ./packages/engine/paima-standalone/packaged/@standalone/* ./bin"
   },
   "devDependencies": {
-    "@nx/esbuild": "16.9.0",
-    "@nx/js": "^16.9.0",
-    "@types/eslint-plugin-prettier": "^3.1.0",
+    "@eslint/eslintrc": "^2.1.2",
+    "@eslint/js": "~8.50.0",
+    "@nx/esbuild": "16.9.1",
+    "@nx/js": "^16.9.1",
+    "@nx/linter": "^16.9.1",
+    "@types/eslint-plugin-prettier": "^3.1.1",
     "@types/node": "^18.17.1",
-    "@typescript-eslint/eslint-plugin": "^6.5.0",
-    "@typescript-eslint/parser": "^6.5.0",
+    "@typescript-eslint/eslint-plugin": "^6.7.3",
+    "@typescript-eslint/parser": "^6.7.3",
     "esbuild": "^0.19.3",
     "eslint-config-airbnb-typescript": "^17.1.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-react": "^7.31.10",
+    "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.3",
-    "nx": "16.9.0",
+    "nx": "16.9.1",
     "prettier": "^3.0.3",
     "syncpack": "^11.2.1",
     "typescript": "^5.2.2"
