--- a/packages/engine/paima-funnel/package.json
+++ b/packages/engine/paima-funnel/package.json
@@ -13,7 +13,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "prettier --write '**/*.ts'"
   },
-  "author": "",
+  "author": "Paima Studios",
   "devDependencies": {
     "prettier": "^3.0.3",
     "prettier-plugin-organize-imports": "^3.2.3",
