--- a/package.json
+++ b/package.json
@@ -5,11 +5,10 @@
   "scripts": {
     "prepare": "husky install",
     "lint:versions": "ts-node -P ./tsconfig.base.json ./tools/scripts/check-implicit-dependencies.ts && syncpack list-mismatches",
-    "lint": "npm run prettier && npm run eslint && npm run lint:versions",
-    "cilint": "npm run cprettier && npm run eslint && npm run lint:versions",
-    "cprettier": "prettier --ignore-path ./.prettierignore --check '**/*.{ts,tsx}'",
-    "eslint": "eslint '**/*.{ts,tsx}'",
-    "prettier": "prettier --ignore-path ./.prettierignore --write '**/*.{ts,tsx}'",
+    "lint": "npm run prettier && npx nx affected --target=lint:eslint && npm run lint:versions",
+    "cilint": "npm run cprettier && npx nx affected --target=lint:eslint && npm run lint:versions",
+    "cprettier": "prettier --ignore-path ./.prettierignore --check '**/*.{sol,ts,tsx}'",
+    "prettier": "prettier --plugin=prettier-plugin-solidity --ignore-path ./.prettierignore --write '**/*.{sol,ts,tsx}'",
     "prebuild": "npx nx run-many -t prebuild",
     "build": "npx nx run-many -t build",
     "release:lib": "sh ./tools/scripts/bump-version.sh && npx nx release publish -g paima-sdk -d",
@@ -36,6 +35,8 @@
     "husky": "^8.0.3",
     "nx": "16.9.1",
     "prettier": "^3.0.3",
+    "prettier-plugin-organize-imports": "^3.2.3",
+    "prettier-plugin-solidity": "^1.1.3",
     "syncpack": "^11.2.1",
     "typescript": "^5.2.2"
   },
