--- a/packages/engine/paima-runtime/package.json
+++ b/packages/engine/paima-runtime/package.json
@@ -6,9 +6,8 @@
   "type": "module",
   "types": "build/index.d.ts",
   "scripts": {
-    "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "prettier --write '**/*.ts'"
+    "lint:eslint": "eslint .",
+    "build": "tsc"
   },
   "author": "Paima Studios",
   "dependencies": {
