--- a/packages/admin-panel/package.json
+++ b/packages/admin-panel/package.json
@@ -3,11 +3,11 @@
   "private": true,
   "version": "1.0.0",
   "scripts": {
+    "lint:eslint": "eslint .",
     "dev": "vite",
     "host": "vite --host 3001",
     "build": "tsc && vite build",
-    "preview": "vite preview",
-    "lint": "prettier --write '**/*.{ts,tsx}'"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@esbuild-plugins/node-globals-polyfill": "^0.1.1",
@@ -21,8 +21,6 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
-    "prettier": "^3.0.3",
-    "prettier-plugin-organize-imports": "^3.2.3",
     "typescript": "^5.2.2",
     "vite": "^2.9.9"
   }
