--- a/packages/batcher/batcher-standalone/package.json
+++ b/packages/batcher/batcher-standalone/package.json
@@ -26,7 +26,7 @@
     "outputPath": "packaged"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint:eslint": "eslint .",
     "build": "npm run build:deps && node ./esbuildconfig.cjs",
     "build:binary": "npm run build && pkg packaged/batcherCorePacked.js --options \"experimental-specifier-resolution=node,no-warnings\" --config package.json && ./scripts/post_build.sh",
     "install-binaries": "../../../scripts/tools/unpack.sh",
