--- a/packages/batcher/utils/package.json
+++ b/packages/batcher/utils/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "types": "build/index.d.ts",
   "scripts": {
+    "lint:eslint": "eslint .",
     "build": "tsc"
   },
   "dependencies": {
