--- a/packages/engine/paima-funnel/package.json
+++ b/packages/engine/paima-funnel/package.json
@@ -9,14 +9,11 @@
     "/build"
   ],
   "scripts": {
-    "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "prettier --write '**/*.ts'"
+    "lint:eslint": "eslint .",
+    "build": "tsc"
   },
   "author": "Paima Studios",
   "devDependencies": {
-    "prettier": "^3.0.3",
-    "prettier-plugin-organize-imports": "^3.2.3",
     "typescript": "^5.2.2"
   },
   "dependencies": {
