--- a/packages/engine/paima-standalone/package.json
+++ b/packages/engine/paima-standalone/package.json
@@ -26,7 +26,7 @@
     ]
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint:eslint": "eslint .",
     "build": "npm run build:deps && node ./esbuildconfig.cjs",
     "build:prod-binary": "npm run build:prod-binary-macos && npm run build:prod-binary-linux",
     "build:prod-binary-macos": "npm run build && ts-node ./scripts/package macos && mv ./packaged/tmp/@standalone/paima-engine-macos ./packaged/@standalone/",
