--- a/packages/paima-sdk/paima-build-utils/package.json
+++ b/packages/paima-sdk/paima-build-utils/package.json
@@ -14,6 +14,7 @@
   },
   "homepage": "https://docs.paimastudios.com",
   "scripts": {
+    "lint:eslint": "eslint .",
     "build": "tsc"
   },
   "bin": {
