--- a/packages/paima-sdk/paima-executors/package.json
+++ b/packages/paima-sdk/paima-executors/package.json
@@ -21,14 +21,11 @@
   },
   "homepage": "https://docs.paimastudios.com",
   "scripts": {
-    "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "prettier --write '**/*.ts'"
+    "lint:eslint": "eslint .",
+    "build": "tsc"
   },
   "devDependencies": {
-    "typescript": "^5.2.2",
-    "prettier": "^3.0.3",
-    "prettier-plugin-organize-imports": "^3.2.3"
+    "typescript": "^5.2.2"
   },
   "dependencies": {
     "@paima/prando": "1.1.0"
