--- a/nx.json
+++ b/nx.json
@@ -3,13 +3,17 @@
     "default": {
       "runner": "nx/tasks-runners/default",
       "options": {
-        "cacheableOperations": ["cilint", "cprettier", "build", "lint:eslint"]
+        "useDaemonProcess": false,
+        "cacheableOperations": ["build", "lint:eslint"]
       }
     }
   },
   "targetDefaults": {
     "build": {
       "dependsOn": ["^build"]
+    },
+    "release": {
+      "dependsOn": ["build", "^release"]
     }
   },
   "affected": {
