--- a/packages/batcher/batcher-standalone/package.json
+++ b/packages/batcher/batcher-standalone/package.json
@@ -8,6 +8,14 @@
   "types": "build/index.d.ts",
   "type": "module",
   "nx": {
+    "targets": {
+      "release": {
+        "dependsOn": ["build"],
+        "outputs": [
+          "{projectRoot}/packaged"
+        ]
+      }
+    },
     "implicitDependencies": ["@paima/batcher-runtime"]
   },
   "files": [
@@ -27,17 +35,16 @@
   },
   "scripts": {
     "lint:eslint": "eslint .",
-    "build": "npm run build:deps && node ./esbuildconfig.cjs",
+    "build": "npx tsc --build tsconfig.build.json",
+    "pack": "node ./esbuildconfig.cjs",
     "build:binary": "npm run build && pkg packaged/batcherCorePacked.js --options \"experimental-specifier-resolution=node,no-warnings\" --config package.json && ./scripts/post_build.sh",
-    "install-binaries": "../../../scripts/tools/unpack.sh",
+    "install-binaries": "../../../tools/scripts/unpack.sh",
     "build:dev-binary": "npm run build:dev-binary-macos && npm run build:dev-binary-linux && ./scripts/post_build.sh",
     "build:dev-binary-macos": "npm run build && pkg-dev packaged/batcherCorePacked.js --output packaged/@standalone/dev-paima-batcher-macos -t node18-macos-x64 -b --options \"inspect,experimental-specifier-resolution=node,no-warnings\" --config package.json",
     "build:dev-binary-linux": "npm run build && pkg-dev packaged/batcherCorePacked.js --output packaged/@standalone/dev-paima-batcher-linux -t node18-linux-x64 -b --options \"inspect,experimental-specifier-resolution=node,no-warnings\" --config package.json",
-    "build:deps": "npx tsc --build tsconfig.build.json",
-    "prepare:standalone": "sh ./scripts/prepare_standalone_folders.sh",
-    "build:standalone": "npm run build:deps && npm run build:binary",
+    "build:standalone": "npm run pack && npm run build:binary",
     "build:dev-standalone": "npm run install-binaries && npm run build:dev-binary",
-    "release": "npm run prepare:standalone && npm run build:standalone && npm run build:dev-standalone"
+    "release": "npm run build:standalone && npm run build:dev-standalone"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
