--- a/packages/engine/paima-standalone/package.json
+++ b/packages/engine/paima-standalone/package.json
@@ -7,6 +7,17 @@
   "main": "build/index.js",
   "types": "build/index.d.ts",
   "type": "module",
+  "nx": {
+    "targets": {
+      "release": {
+        "dependsOn": ["build", "^release"],
+        "outputs": [
+          "{projectRoot}/packaged"
+        ]
+      }
+    },
+    "implicitDependencies": ["@standalone/paima-batcher"]
+  },
   "files": [
     "/build"
   ],
@@ -14,7 +25,7 @@
   "pkg": {
     "scripts": [],
     "assets": [
-      "./paima-sdk/**/*",
+      "./metadata.json",
       "./templates/**/*",
       "./contracts/**/*",
       "./batcher/**/*",
@@ -27,17 +38,17 @@
   },
   "scripts": {
     "lint:eslint": "eslint .",
-    "build": "npm run build:deps && node ./esbuildconfig.cjs",
+    "build": "npx tsc --build tsconfig.json",
+    "pack": "node ./esbuildconfig.cjs",
     "build:prod-binary": "npm run build:prod-binary-macos && npm run build:prod-binary-linux",
-    "build:prod-binary-macos": "npm run build && ts-node ./scripts/package macos && mv ./packaged/tmp/@standalone/paima-engine-macos ./packaged/@standalone/",
-    "build:prod-binary-linux": "npm run build && ts-node ./scripts/package linux && mv ./packaged/tmp/@standalone/paima-engine-linux ./packaged/@standalone/",
-    "install-binaries": "../../../scripts/tools/unpack.sh",
+    "build:prod-binary-macos": "npm run pack && ts-node ./scripts/package macos && mv ./packaged/tmp/@standalone/paima-engine-macos ./packaged/@standalone/",
+    "build:prod-binary-linux": "npm run pack && ts-node ./scripts/package linux && mv ./packaged/tmp/@standalone/paima-engine-linux ./packaged/@standalone/",
+    "install-binaries": "../../../tools/scripts/unpack.sh",
     "build:dev-binary": "npm run build:dev-binary-macos && npm run build:dev-binary-linux",
-    "build:dev-binary-macos": "npm run build && ts-node ./scripts/package macos --debug",
-    "build:dev-binary-linux": "npm run build && ts-node ./scripts/package linux --debug",
-    "build:deps": "npx tsc --build tsconfig.json",
+    "build:dev-binary-macos": "npm run pack && ts-node ./scripts/package macos --debug",
+    "build:dev-binary-linux": "npm run pack && ts-node ./scripts/package linux --debug",
     "prepare:standalone": "sh ./scripts/prepare_standalone_folders.sh",
-    "build:standalone": "npm run build:deps && npm run build:prod-binary",
+    "build:standalone": "npm run build:prod-binary",
     "build:dev-standalone": "npm run install-binaries && npm run build:dev-binary",
     "release": "npm run prepare:standalone && npm run build:standalone && npm run build:dev-standalone",
     "standalone": "npm run prepare:standalone && npm run build:standalone"
