Add missing build output in paima-utils

--- a/packages/paima-sdk/paima-utils/package.json
+++ b/packages/paima-sdk/paima-utils/package.json
@@ -10,6 +10,15 @@
       "types": "./build/index.d.ts"
     }
   },
+  "nx": {
+    "targets": {
+      "prebuild": {
+        "outputs": [
+          "{projectRoot}/src/contract-types"
+        ]
+      }
+    }
+  },
   "files": [
     "/build"
   ],
