Check tsconfig reference correctness

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lint:versions": "ts-node -P ./tsconfig.base.json ./tools/scripts/check-implicit-dependencies.ts && syncpack list-mismatches",
     "lint": "npm run prettier && npx nx affected --target=lint:eslint && npm run lint:versions",
     "cilint": "npm run cprettier && npx nx affected --target=lint:eslint && npm run lint:versions",
-    "cprettier": "prettier --ignore-path ./.prettierignore --check '**/*.{sol,ts,tsx}'",
+    "cprettier": "prettier --plugin=prettier-plugin-solidity --ignore-path ./.prettierignore --check '**/*.{sol,ts,tsx}'",
     "prettier": "prettier --plugin=prettier-plugin-solidity --ignore-path ./.prettierignore --write '**/*.{sol,ts,tsx}'",
     "prebuild": "npx nx run-many -t prebuild",
     "build": "npx nx run-many -t build",
@@ -33,6 +33,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.3",
+    "json5": "^2.2.3",
     "nx": "16.9.1",
     "prettier": "^3.0.3",
     "prettier-plugin-organize-imports": "^3.2.3",
