--- a/packages/paima-sdk/paima-providers/tsconfig.json
+++ b/packages/paima-sdk/paima-providers/tsconfig.json
@@ -4,5 +4,9 @@
     "rootDir": ".",
     "noEmit": true,
   },
-  "include": ["test/**/*", "src/**/*"]
+  "include": ["test/**/*", "src/**/*"],
+  "references": [
+    { "path": "../utils/tsconfig.build.json" },
+    { "path": "../crypto/tsconfig.build.json" }
+  ]
 }
