--- a/packages/paima-sdk/paima-crypto/tsconfig.json
+++ b/packages/paima-sdk/paima-crypto/tsconfig.json
@@ -4,5 +4,8 @@
     "rootDir": ".",
     "noEmit": true,
   },
-  "include": ["test/**/*", "src/**/*"]
+  "include": ["test/**/*", "src/**/*"],
+  "references": [
+    { "path": "../paima-utils/tsconfig.build.json" }
+  ]
 }
