--- a/packages/paima-sdk/paima-mw-core/tsconfig.json
+++ b/packages/paima-sdk/paima-mw-core/tsconfig.json
@@ -5,5 +5,10 @@
     "outDir": "build"
   },
   "include": ["src/**/*"],
-  "references": [{ "path": "../paima-utils/tsconfig.build.json" }, { "path": "../paima-prando" }]
+  "references": [
+    { "path": "../paima-utils/tsconfig.build.json" },
+    { "path": "../paima-prando" },
+    { "path": "../paima-concise/tsconfig.build.json" },
+    { "path": "../paima-providers/tsconfig.build.json" }
+  ]
 }
