--- a/packages/paima-sdk/paima-utils-backend/tsconfig.json
+++ b/packages/paima-sdk/paima-utils-backend/tsconfig.json
@@ -5,5 +5,6 @@
     "outDir": "build",
     "resolveJsonModule": true
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*"],
+  "references": [{ "path": "../utils" }, { "path": "../db" }]
 }
