--- a/package.json
+++ b/package.json
@@ -41,13 +41,16 @@
     "prettier-plugin-organize-imports": "^3.2.3",
     "prettier-plugin-solidity": "^1.1.3",
     "syncpack": "^11.2.1",
-    "typescript": "^5.2.2",
-    "ts-jest": "^29.1.1"
+    "ts-jest": "^29.1.1",
+    "typescript": "^5.2.2"
   },
   "overrides": {
     "web3-eth-contract": "1.10.0"
   },
   "workspaces": [
     "./packages/*/*"
-  ]
+  ],
+  "dependencies": {
+    "assert-never": "^1.2.1"
+  }
 }
