--- a/packages/engine/paima-runtime/package.json
+++ b/packages/engine/paima-runtime/package.json
@@ -7,10 +7,13 @@
   "types": "build/index.d.ts",
   "scripts": {
     "lint:eslint": "eslint .",
-    "build": "tsc"
+    "build": "tsc --build tsconfig.build.json",
+    "test": "jest --runInBand"
   },
   "author": "Paima Studios",
   "dependencies": {
+    "@sinclair/typebox": "^0.30.4",
+    "yaml": "^2.3.1",
     "cors": "^2.8.5",
     "express": "^4.18.1"
   },
