Fix ts-jest setup for esm modules

--- a/nx.json
+++ b/nx.json
@@ -13,7 +13,8 @@
       "dependsOn": ["build", "^build"]
     },
     "test": {
-      "dependsOn": ["^build"]
+      "dependsOn": ["^build"],
+      "inputs": ["default", "^default", "{workspaceRoot}/jest.preset.js"]
     },
     "build": {
       "dependsOn": ["^build"]
