--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "@eslint/eslintrc": "^2.1.2",
     "@eslint/js": "~8.50.0",
     "@nx/esbuild": "16.9.1",
-    "@nx/js": "^16.9.1",
+    "@nx/jest": "16.10.0",
+    "@nx/js": "16.10.0",
     "@nx/linter": "^16.9.1",
     "@types/eslint-plugin-prettier": "^3.1.1",
+    "@types/jest": "^29.4.0",
     "@types/node": "^18.17.1",
     "@typescript-eslint/eslint-plugin": "^6.7.3",
     "@typescript-eslint/parser": "^6.7.3",
@@ -35,6 +37,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.3",
+    "jest": "^29.4.1",
     "json5": "^2.2.3",
     "nx": "16.9.1",
     "prettier": "^3.0.3",
@@ -42,6 +45,7 @@
     "prettier-plugin-solidity": "^1.1.3",
     "syncpack": "^11.2.1",
     "ts-jest": "^29.1.1",
+    "ts-node": "10.9.1",
     "typescript": "^5.2.2"
   },
   "overrides": {
