--- a/packages/engine/paima-runtime/package.json
+++ b/packages/engine/paima-runtime/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "lint:eslint": "eslint .",
     "build": "tsc --build tsconfig.build.json",
-    "test": "jest --runInBand"
+    "test": "NODE_OPTIONS=--experimental-vm-modules jest --runInBand"
   },
   "author": "Paima Studios",
   "dependencies": {
