--- a/packages/paima-sdk/paima-utils/package.json
+++ b/packages/paima-sdk/paima-utils/package.json
@@ -32,13 +32,13 @@
     "prebuild": "npm run generate-types",
     "build": "tsc --build tsconfig.build.json",
     "generate-types": "npx typechain --target=web3-v1 'src/artifacts/*.json' --out-dir src/contract-types",
-    "test": "jest --runInBand"
+    "test": "NODE_OPTIONS=--experimental-vm-modules jest --runInBand"
   },
   "devDependencies": {
-    "@typechain/web3-v1": "^6.0.2",
+    "@typechain/web3-v1": "^6.0.6",
     "@types/express": "^4.17.13",
     "@types/node": "^18.17.1",
-    "typechain": "^8.1.1"
+    "typechain": "^8.3.1"
   },
   "dependencies": {
     "@sinclair/typebox": "^0.30.4",
