--- a/package.json
+++ b/package.json
@@ -6,15 +6,15 @@
     "prepare": "husky install",
     "lint:configs": "ts-node -P ./tsconfig.base.json ./tools/scripts/check-implicit-dependencies.ts",
     "lint:versions": "syncpack list-mismatches",
-    "lint": "npm run prettier && npx nx affected --target=lint:eslint --parallel=${PARALLEL:-3} && npm run lint:configs && npm run lint:versions",
-    "cilint": "npm run cprettier && npx nx affected --target=lint:eslint --parallel=${PARALLEL:-3} && npm run lint:configs && npm run lint:versions",
+    "lint": "npm run prettier && npx nx affected --target=lint:eslint --parallel=${NX_PARALLEL:-3} && npm run lint:configs && npm run lint:versions",
+    "cilint": "npm run cprettier && npx nx affected --target=lint:eslint --parallel=${NX_PARALLEL:-3} && npm run lint:configs && npm run lint:versions",
     "cprettier": "prettier --plugin=prettier-plugin-solidity --ignore-path ./.prettierignore --check '**/*.{sol,ts,tsx}'",
     "prettier": "prettier --plugin=prettier-plugin-solidity --ignore-path ./.prettierignore --write '**/*.{sol,ts,tsx}'",
-    "prebuild": "npx nx run-many --parallel=${PARALLEL:-3} -t prebuild",
-    "build": "npm run lint:configs && npx nx run-many --parallel=${PARALLEL:-3} -t build",
-    "test": "npm run lint:configs && npx nx run-many --parallel=${PARALLEL:-3} -t test",
+    "prebuild": "npx nx run-many --parallel=${NX_PARALLEL:-3} -t prebuild",
+    "build": "npm run lint:configs && npx nx run-many --parallel=${NX_PARALLEL:-3} -t build",
+    "test": "npm run lint:configs && npx nx run-many --parallel=${NX_PARALLEL:-3} -t test",
     "release:lib": "./wipe.sh && sh ./tools/scripts/bump-version.sh && npm run build && npm run lint && npm run test && read -p 'Enter OTP: ' otp && export NPM_CONFIG_OTP=$otp && npx nx release publish -g paima-sdk",
-    "release:bin": "./wipe.sh && npm run lint:configs && npx nx run-many --parallel=${PARALLEL:-3} -t release && mkdir -p ./bin && cp -r ./packages/engine/paima-standalone/packaged/@standalone/* ./bin"
+    "release:bin": "./wipe.sh && npm run lint:configs && npx nx run-many --parallel=${NX_PARALLEL:-3} -t release && mkdir -p ./bin && cp -r ./packages/engine/paima-standalone/packaged/@standalone/* ./bin"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^2.1.2",
