--- a/packages/engine/paima-runtime/package.json
+++ b/packages/engine/paima-runtime/package.json
@@ -13,13 +13,17 @@
   "author": "Paima Studios",
   "dependencies": {
     "@sinclair/typebox": "^0.31.17",
-    "yaml": "^2.3.1",
     "cors": "^2.8.5",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "fnv-plus": "^1.3.1",
+    "json-stable-stringify": "^1.0.2",
+    "yaml": "^2.3.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/fnv-plus": "^1.3.0",
+    "@types/json-stable-stringify": "^1.0.34",
     "@types/node": "^18.17.1"
   }
 }
