--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "prettier-plugin-solidity": "^1.1.3",
     "syncpack": "^11.2.1",
     "ts-jest": "^29.1.1",
-    "ts-node": "10.9.1",
+    "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   },
   "overrides": {
