--- a/packages/paima-sdk/paima-utils/package.json
+++ b/packages/paima-sdk/paima-utils/package.json
@@ -41,12 +41,14 @@
     "typechain": "^8.3.1"
   },
   "dependencies": {
+    "@metamask/eth-json-rpc-middleware": "^12.0.0",
+    "@metamask/json-rpc-engine": "^7.2.0",
     "@sinclair/typebox": "^0.31.17",
     "algosdk": "^2.3.0",
     "flatted": "^3.2.7",
     "i": "^0.3.7",
     "npm": "^10.0.0",
-    "yaml": "^2.3.1",
-    "web3": "1.10.0"
+    "web3": "1.10.0",
+    "yaml": "^2.3.1"
   }
 }
