--- a/packages/paima-sdk/paima-providers/package.json
+++ b/packages/paima-sdk/paima-providers/package.json
@@ -33,6 +33,7 @@
     "@truffle/hdwallet-provider": "^2.1.15",
     "bech32": "^2.0.0",
     "web3": "1.10.0",
-    "web3-utils": "1.10.0"
+    "web3-utils": "1.10.0",
+    "assert-never": "^1.2.1"
   }
 }
