Support for mac m{1,2,3} docker image

--- a/packages/batcher/batcher-standalone/scripts/docker/Dockerfile
+++ b/packages/batcher/batcher-standalone/scripts/docker/Dockerfile
@@ -1,5 +1,5 @@
 # Common build stage
-FROM node:16.17.0 as common-build-stage
+FROM  --platform=linux/amd64 node:16.17.0 as common-build-stage
 
 COPY . ./app
 
