--- a/packages/batcher/address-validator/package.json
+++ b/packages/batcher/address-validator/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "pg": "^8.7.3",
     "web3": "1.10.0",
-    "assert-never": "^1.2.1"
+    "assert-never": "^1.2.1",
+    "@dcspark/carp-client": "../../../tmp-carp-client"
   },
   "devDependencies": {
     "@types/pg": "^8.6.5"
