Fix compiler errors

--- a/nx.json
+++ b/nx.json
@@ -43,6 +43,9 @@
       },
       "node-sdk": {
         "projects": ["directory:packages/node-sdk/*"]
+      },
+      "build-utils": {
+        "projects": ["directory:packages/build-utils/*"]
       }
     }
   }
