--- a/packages/contracts/evm-contrats/package.json
+++ b/packages/contracts/evm-contrats/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nft-sale",
+  "name": "@paima/evm-contracts",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,23 +11,18 @@
     "compile": "npx truffle compile",
     "prettier": "prettier --write '**/*.{sol,js,ts}'"
   },
-  "prettier": {
-    "tabWidth": 4,
-    "arrowParens": "avoid"
-  },
   "keywords": [],
   "author": "Paima Studios",
   "license": "MIT",
   "dependencies": {
+    "@nomicfoundation/hardhat-toolbox": "^4.0.0",
     "@openzeppelin/contracts": "^4.6.0",
     "@openzeppelin/contracts-upgradeable": "^4.6.0",
     "dotenv": "^16.0.3"
   },
   "devDependencies": {
-    "@truffle/hdwallet-provider": "^2.1.15",
-    "@types/mocha": "^9.1.1",
-    "hardhat": "^2.19.2",
-    "truffle": "^5.11.5",
+    "@nomicfoundation/hardhat-toolbox-viem": "^2.0.0",
+    "hardhat": "^2.19.3",
     "ts-node": "^10.9.1"
   }
 }
