Update Solidity so contracts are reusable

--- a/packages/contracts/evm-contracts/foundry.toml
+++ b/packages/contracts/evm-contracts/foundry.toml
@@ -1,11 +1,13 @@
 [profile.default]
 src = 'contracts' # the source directory
 test = 'test' # the test directory
-out = 'build/artifacts' # the output directory (for artifacts)
+out = 'artifacts/forge' # the output directory (for artifacts)
 libs = ['test-lib'] # a list of library directories    
 remappings = [ # a list of remappings
   '@openzeppelin/=../../../node_modules/@openzeppelin/',
 ]
+cache_path = 'cache/forge'
+allow_paths = ["../../../node_modules"]
 #libraries = []                                                # a list of deployed libraries to link against
 #cache = true                                                  # whether to cache builds or not
 #force = false                                                 # whether to ignore the cache (clean build)
